parser/svYacc.output
Terminals unused in grammar

   SYSTEM_TASK_NAME
   STRING
   PPATH
   TRIGGER
   RNAND
   FPATH
   DEFINE
   PARSE_ERROR
   Key_DEFINE
   Key_INCLUDE


State 29 conflicts: 21 shift/reduce, 1 reduce/reduce
State 31 conflicts: 1 shift/reduce
State 60 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: descriptionList

    2 descriptionList: descriptionList description
    3                | %empty

    4 description: module

    5 $@1: %empty

    6 $@2: %empty

    7 module: _placeHolder_ Key_MODULE moduleName optModPortList SEMI $@1 optModuleItemList $@2 Key_ENDMODULE

    8 optModPortList: %empty
    9               | LPAREN RPAREN
   10               | LPAREN modPortList RPAREN

   11 modPortList: modPortList COMMA modPortName
   12            | modPortName

   13 modPortName: direction portName
   14            | portName

   15 optModuleItemList: optModuleItemList modItem
   16                  | %empty

   17 modItem: portDecl
   18        | netDecl
   19        | regDecl
   20        | integerDecl
   21        | realDecl
   22        | constDecl
   23        | stmtList
   24        | realTimeDecl
   25        | timeDecl

   26 portDecl: direction portTypeDeclOrNull signedOrNull rangeOrNull variableList SEMI
   27         | Key_OUTPUT Key_REG signedOrNull rangeOrNull variableList SEMI
   28         | Key_OUTPUT outputVariable variableList SEMI

   29 outputVariable: Key_TIME
   30               | Key_INTEGER

   31 portTypeDeclOrNull: Key_WIRE
   32                   | Key_UWIRE
   33                   | Key_WAND
   34                   | Key_WOR
   35                   | Key_TRI
   36                   | Key_TRI0
   37                   | Key_TRI1
   38                   | Key_TRIAND
   39                   | Key_TRIOR
   40                   | Key_SUPPLY0
   41                   | Key_SUPPLY1
   42                   | Key_TRIREG
   43                   | Key_REG
   44                   | %empty

   45 rangeOrNull: range
   46            | %empty

   47 netDecl: netTypeDecl signedOrNull delayOrNull netItemOrAssignDeclList SEMI
   48        | netTypeDecl vectoredOrScalared signedOrNull range delayOrNull netItemOrAssignDeclList SEMI
   49        | netTypeDecl signedOrNull range delayOrNull netItemOrAssignDeclList SEMI
   50        | netTypeDecl strengthList signedOrNull delayOrNull netItemAssignDeclList SEMI
   51        | netTypeDecl strengthList vectoredOrScalared signedOrNull range delayOrNull netItemAssignDeclList SEMI
   52        | netTypeDecl strengthList signedOrNull range delayOrNull netItemAssignDeclList SEMI

   53 delayOrNull: delay1
   54            | delay2
   55            | %empty

   56 delay1: POUND NUMBER
   57       | POUND IDENTIFIER

   58 delay2: POUND LPAREN minTypMaxExpr RPAREN
   59       | POUND LPAREN minTypMaxExpr COMMA minTypMaxExpr RPAREN
   60       | POUND LPAREN minTypMaxExpr COMMA minTypMaxExpr COMMA minTypMaxExpr RPAREN

   61 minTypMaxExpr: cExpression
   62              | cExpression COLON cExpression COLON cExpression

   63 vectoredOrScalared: VECTORED
   64                   | SCALARED

   65 netTypeDecl: Key_WIRE
   66            | Key_UWIRE
   67            | Key_WAND
   68            | Key_WOR
   69            | Key_TRI
   70            | Key_TRI0
   71            | Key_TRI1
   72            | Key_TRIAND
   73            | Key_TRIOR
   74            | Key_SUPPLY0
   75            | Key_SUPPLY1
   76            | Key_TRIREG

   77 strengthList: LPAREN strength0 COMMA strength1 RPAREN
   78             | LPAREN strength1 COMMA strength0 RPAREN
   79             | LPAREN Key_HIGHZ1 COMMA strength0 RPAREN
   80             | LPAREN Key_HIGHZ0 COMMA strength1 RPAREN
   81             | LPAREN strength1 COMMA Key_HIGHZ0 RPAREN
   82             | LPAREN strength0 COMMA Key_HIGHZ1 RPAREN

   83 strength0: Key_STRONG0
   84          | Key_SUPPLY0
   85          | Key_PULL0
   86          | Key_WEAK0

   87 strength1: Key_STRONG1
   88          | Key_SUPPLY1
   89          | Key_PULL1
   90          | Key_WEAK1

   91 regDecl: Key_REG signedOrNull optRange variableList SEMI

   92 signedOrNull: SIGNED
   93             | %empty

   94 integerDecl: Key_INTEGER variableList SEMI

   95 realDecl: Key_REAL variableList SEMI

   96 realTimeDecl: Key_REALTIME variableList SEMI

   97 timeDecl: Key_TIME variableList SEMI

   98 constDecl: Key_PARAMETER localIdentifier ASSIGN NUMBER SEMI

   99 assignStmt: Key_ASSIGN assignExprList SEMI

  100 blkAssignStmt: assignExprList SEMI

  101 nonblkAssignStmt: exprVar LE cExpression SEMI

  102 assignExprList: assignExprList COMMA assignExpr
  103               | assignExpr

  104 assignExpr: localIdList ASSIGN cExpression

  105 localIdList: localIdentifier
  106            | LCURLY lIdList RCURLY

  107 lIdList: lIdList COMMA localIdentifier
  108        | localIdentifier

  109 instanceStmt: localIdentifier localIdentifier LPAREN modPortAssignList RPAREN SEMI

  110 modPortAssignList: modPortAssignList COMMA modPortAssign
  111                  | modPortAssign

  112 modPortAssign: DOT localVar LPAREN localIdentifier RPAREN
  113              | localVar

  114 localVar: localIdentifier optBitSel

  115 variableList: variableList COMMA varWtInit
  116             | varWtInit

  117 varWtInit: variableName ASSIGN cExpression
  118          | variableName optRange

  119 netItemOrAssignDeclList: netItemAssignDeclList
  120                        | netItemDeclList

  121 netItemAssignDeclList: netItemAssignDeclList COMMA netAssignExpr
  122                      | netAssignExpr

  123 netAssignExpr: variableName ASSIGN cExpression

  124 netItemDeclList: netItemDeclList COMMA netIdentifier
  125                | netIdentifier

  126 netIdentifier: variableName optRange

  127 alwaysStmt: Key_ALWAYS AT LPAREN sensitivityList RPAREN stmtOrBlock

  128 sensitivityList: sensitivityList BOROP sensitivity
  129                | sensitivityList COMMA sensitivity
  130                | sensitivity

  131 sensitivity: STAR
  132            | Key_POSEDGE variableName
  133            | Key_NEGEDGE variableName
  134            | variableName

  135 stmtOrBlock: procStmt
  136            | block

  137 block: Key_BEGIN procStmtList Key_END

  138 stmtList: stmtList stmt
  139         | %empty

  140 procStmtList: procStmtList procStmt
  141             | %empty

  142 stmt: assignStmt
  143     | instanceStmt
  144     | alwaysStmt

  145 procStmt: nonblkAssignStmt
  146         | blkAssignStmt
  147         | instanceStmt
  148         | alwaysStmt

  149 _placeHolder_: %empty

  150 cExpression: lExpression QUESTION cExpression COLON cExpression
  151            | lExpression

  152 @3: %empty

  153 lExpression: lExpression LAND redExpression @3

  154 @4: %empty

  155 lExpression: lExpression LOR redExpression @4
  156            | redExpression

  157 @5: %empty

  158 redExpression: redExpression BAND relExpression @5

  159 @6: %empty

  160 redExpression: redExpression BOR relExpression @6

  161 @7: %empty

  162 redExpression: redExpression BXOR relExpression @7

  163 @8: %empty

  164 redExpression: redExpression BXNOR relExpression @8

  165 @9: %empty

  166 redExpression: redExpression RNOR relExpression @9

  167 @10: %empty

  168 redExpression: BNOT relExpression @10
  169              | relExpression

  170 @11: %empty

  171 relExpression: relExpression LT expression @11

  172 @12: %empty

  173 relExpression: relExpression LE expression @12

  174 @13: %empty

  175 relExpression: relExpression GT expression @13

  176 @14: %empty

  177 relExpression: relExpression GE expression @14

  178 @15: %empty

  179 relExpression: relExpression EQUAL expression @15

  180 @16: %empty

  181 relExpression: relExpression NOT_EQ expression @16

  182 @17: %empty

  183 relExpression: relExpression EQ_CASE expression @17

  184 @18: %empty

  185 relExpression: relExpression NOT_EQ_CASE expression @18
  186              | expression

  187 expression: expression PLUS term
  188           | expression MINUS term
  189           | expression SL term
  190           | expression SR term
  191           | term

  192 term: term STAR factor
  193     | term DIV factor
  194     | term MOD factor
  195     | term BNOT factor
  196     | term LNOT factor
  197     | factor

  198 factor: LPAREN cExpression RPAREN
  199       | exprVar

  200 exprVar: NUMBER
  201        | variableName optBitSel

  202 optBitSel: %empty
  203          | LBRACK cExpression RBRACK

  204 moduleName: localIdentifier

  205 portName: localIdentifier

  206 variableName: localIdentifier

  207 localIdentifier: IDENTIFIER
  208                | ESCAPED_IDENTIFIER

  209 direction: Key_INPUT
  210          | Key_INOUT
  211          | Key_OUTPUT

  212 optRange: range
  213         | %empty

  214 range: LBRACK cExpression tail_range

  215 tail_range: COLON cExpression RBRACK
  216           | RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 57 207
SYSTEM_TASK_NAME (259)
ESCAPED_IDENTIFIER (260) 208
STRING (261)
NUMBER (262) 56 98 200
AT (263) 127
COLON (264) 62 150 215
COMMA (265) 11 59 60 77 78 79 80 81 82 102 107 110 115 121 124 129
DOT (266) 112
EQ_CASE (267) 183
EQUAL (268) 179
PPATH (269)
ASSIGN (270) 98 104 117 123
TRIGGER (271)
MINUS (272) 188
LCURLY (273) 106
RCURLY (274) 106
LBRACK (275) 203 214
RBRACK (276) 203 215 216
LPAREN (277) 9 10 58 59 60 77 78 79 80 81 82 109 112 127 198
RPAREN (278) 9 10 58 59 60 77 78 79 80 81 82 109 112 127 198
POUND (279) 56 57 58 59 60
QUESTION (280) 150
SEMI (281) 7 26 27 28 47 48 49 50 51 52 91 94 95 96 97 98 99 100 101
    109
PLUS (282) 187
NOT_EQ_CASE (283) 185
NOT_EQ (284) 181
LNOT (285) 196
RNOR (286) 166
RNAND (287)
BNOT (288) 168 195
LAND (289) 153
BAND (290) 158
LOR (291) 155
BOR (292) 160
BXNOR (293) 164
BXOR (294) 162
DIV (295) 193
MOD (296) 194
LE (297) 101 173
SL (298) 189
LT (299) 171
GE (300) 177
SR (301) 190
GT (302) 175
FPATH (303)
STAR (304) 131 192
DEFINE (305)
PARSE_ERROR (306)
BOROP (307) 128
SIGNED (308) 92
VECTORED (309) 63
SCALARED (310) 64
Key_ASSIGN (311) 99
Key_ALWAYS (312) 127
Key_BEGIN (313) 137
Key_DEFINE (314)
Key_END (315) 137
Key_ENDMODULE (316) 7
Key_INTEGER (317) 30 94
Key_INCLUDE (318)
Key_INOUT (319) 210
Key_INPUT (320) 209
Key_MODULE (321) 7
Key_NEGEDGE (322) 133
Key_OUTPUT (323) 27 28 211
Key_PARAMETER (324) 98
Key_POSEDGE (325) 132
Key_PULL0 (326) 85
Key_PULL1 (327) 89
Key_SUPPLY0 (328) 40 74 84
Key_SUPPLY1 (329) 41 75 88
Key_WEAK0 (330) 86
Key_WEAK1 (331) 90
Key_REAL (332) 95
Key_REG (333) 27 43 91
Key_TIME (334) 29 97
Key_REALTIME (335) 96
Key_STRONG0 (336) 83
Key_STRONG1 (337) 87
Key_TRIREG (338) 42 76
Key_WIRE (339) 31 65
Key_UWIRE (340) 32 66
Key_WAND (341) 33 67
Key_WOR (342) 34 68
Key_TRI (343) 35 69
Key_TRIAND (344) 38 72
Key_TRIOR (345) 39 73
Key_TRI0 (346) 36 70
Key_TRI1 (347) 37 71
Key_HIGHZ0 (348) 80 81
Key_HIGHZ1 (349) 79 82


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
program (96)
    on left: 1, on right: 0
descriptionList (97)
    on left: 2 3, on right: 1 2
description (98)
    on left: 4, on right: 2
module (99)
    on left: 7, on right: 4
$@1 (100)
    on left: 5, on right: 7
$@2 (101)
    on left: 6, on right: 7
optModPortList (102)
    on left: 8 9 10, on right: 7
modPortList (103)
    on left: 11 12, on right: 10 11
modPortName (104)
    on left: 13 14, on right: 11 12
optModuleItemList (105)
    on left: 15 16, on right: 7 15
modItem (106)
    on left: 17 18 19 20 21 22 23 24 25, on right: 15
portDecl (107)
    on left: 26 27 28, on right: 17
outputVariable (108)
    on left: 29 30, on right: 28
portTypeDeclOrNull (109)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44, on right: 26
rangeOrNull (110)
    on left: 45 46, on right: 26 27
netDecl (111)
    on left: 47 48 49 50 51 52, on right: 18
delayOrNull (112)
    on left: 53 54 55, on right: 47 48 49 50 51 52
delay1 (113)
    on left: 56 57, on right: 53
delay2 (114)
    on left: 58 59 60, on right: 54
minTypMaxExpr (115)
    on left: 61 62, on right: 58 59 60
vectoredOrScalared (116)
    on left: 63 64, on right: 48 51
netTypeDecl (117)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76, on right: 47 48 49
    50 51 52
strengthList (118)
    on left: 77 78 79 80 81 82, on right: 50 51 52
strength0 (119)
    on left: 83 84 85 86, on right: 77 78 79 82
strength1 (120)
    on left: 87 88 89 90, on right: 77 78 80 81
regDecl (121)
    on left: 91, on right: 19
signedOrNull (122)
    on left: 92 93, on right: 26 27 47 48 49 50 51 52 91
integerDecl (123)
    on left: 94, on right: 20
realDecl (124)
    on left: 95, on right: 21
realTimeDecl (125)
    on left: 96, on right: 24
timeDecl (126)
    on left: 97, on right: 25
constDecl (127)
    on left: 98, on right: 22
assignStmt (128)
    on left: 99, on right: 142
blkAssignStmt (129)
    on left: 100, on right: 146
nonblkAssignStmt (130)
    on left: 101, on right: 145
assignExprList (131)
    on left: 102 103, on right: 99 100 102
assignExpr (132)
    on left: 104, on right: 102 103
localIdList (133)
    on left: 105 106, on right: 104
lIdList (134)
    on left: 107 108, on right: 106 107
instanceStmt (135)
    on left: 109, on right: 143 147
modPortAssignList (136)
    on left: 110 111, on right: 109 110
modPortAssign (137)
    on left: 112 113, on right: 110 111
localVar (138)
    on left: 114, on right: 112 113
variableList (139)
    on left: 115 116, on right: 26 27 28 91 94 95 96 97 115
varWtInit (140)
    on left: 117 118, on right: 115 116
netItemOrAssignDeclList (141)
    on left: 119 120, on right: 47 48 49
netItemAssignDeclList (142)
    on left: 121 122, on right: 50 51 52 119 121
netAssignExpr (143)
    on left: 123, on right: 121 122
netItemDeclList (144)
    on left: 124 125, on right: 120 124
netIdentifier (145)
    on left: 126, on right: 124 125
alwaysStmt (146)
    on left: 127, on right: 144 148
sensitivityList (147)
    on left: 128 129 130, on right: 127 128 129
sensitivity (148)
    on left: 131 132 133 134, on right: 128 129 130
stmtOrBlock (149)
    on left: 135 136, on right: 127
block (150)
    on left: 137, on right: 136
stmtList (151)
    on left: 138 139, on right: 23 138
procStmtList (152)
    on left: 140 141, on right: 137 140
stmt (153)
    on left: 142 143 144, on right: 138
procStmt (154)
    on left: 145 146 147 148, on right: 135 140
_placeHolder_ (155)
    on left: 149, on right: 7
cExpression (156)
    on left: 150 151, on right: 61 62 101 104 117 123 150 198 203 214
    215
lExpression (157)
    on left: 153 155 156, on right: 150 151 153 155
@3 (158)
    on left: 152, on right: 153
@4 (159)
    on left: 154, on right: 155
redExpression (160)
    on left: 158 160 162 164 166 168 169, on right: 153 155 156 158
    160 162 164 166
@5 (161)
    on left: 157, on right: 158
@6 (162)
    on left: 159, on right: 160
@7 (163)
    on left: 161, on right: 162
@8 (164)
    on left: 163, on right: 164
@9 (165)
    on left: 165, on right: 166
@10 (166)
    on left: 167, on right: 168
relExpression (167)
    on left: 171 173 175 177 179 181 183 185 186, on right: 158 160
    162 164 166 168 169 171 173 175 177 179 181 183 185
@11 (168)
    on left: 170, on right: 171
@12 (169)
    on left: 172, on right: 173
@13 (170)
    on left: 174, on right: 175
@14 (171)
    on left: 176, on right: 177
@15 (172)
    on left: 178, on right: 179
@16 (173)
    on left: 180, on right: 181
@17 (174)
    on left: 182, on right: 183
@18 (175)
    on left: 184, on right: 185
expression (176)
    on left: 187 188 189 190 191, on right: 171 173 175 177 179 181
    183 185 186 187 188 189 190
term (177)
    on left: 192 193 194 195 196 197, on right: 187 188 189 190 191
    192 193 194 195 196
factor (178)
    on left: 198 199, on right: 192 193 194 195 196 197
exprVar (179)
    on left: 200 201, on right: 101 199
optBitSel (180)
    on left: 202 203, on right: 114 201
moduleName (181)
    on left: 204, on right: 7
portName (182)
    on left: 205, on right: 13 14
variableName (183)
    on left: 206, on right: 117 118 123 126 132 133 134 201
localIdentifier (184)
    on left: 207 208, on right: 98 105 107 108 109 112 114 204 205
    206
direction (185)
    on left: 209 210 211, on right: 13 26
optRange (186)
    on left: 212 213, on right: 91 118 126
range (187)
    on left: 214, on right: 45 48 49 51 52 212
tail_range (188)
    on left: 215 216, on right: 214


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (descriptionList)

    program          go to state 1
    descriptionList  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: descriptionList .
    2 descriptionList: descriptionList . description

    Key_MODULE  reduce using rule 149 (_placeHolder_)
    $default    reduce using rule 1 (program)

    description    go to state 4
    module         go to state 5
    _placeHolder_  go to state 6


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 descriptionList: descriptionList description .

    $default  reduce using rule 2 (descriptionList)


State 5

    4 description: module .

    $default  reduce using rule 4 (description)


State 6

    7 module: _placeHolder_ . Key_MODULE moduleName optModPortList SEMI $@1 optModuleItemList $@2 Key_ENDMODULE

    Key_MODULE  shift, and go to state 7


State 7

    7 module: _placeHolder_ Key_MODULE . moduleName optModPortList SEMI $@1 optModuleItemList $@2 Key_ENDMODULE

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    moduleName       go to state 10
    localIdentifier  go to state 11


State 8

  207 localIdentifier: IDENTIFIER .

    $default  reduce using rule 207 (localIdentifier)


State 9

  208 localIdentifier: ESCAPED_IDENTIFIER .

    $default  reduce using rule 208 (localIdentifier)


State 10

    7 module: _placeHolder_ Key_MODULE moduleName . optModPortList SEMI $@1 optModuleItemList $@2 Key_ENDMODULE

    LPAREN  shift, and go to state 12

    $default  reduce using rule 8 (optModPortList)

    optModPortList  go to state 13


State 11

  204 moduleName: localIdentifier .

    $default  reduce using rule 204 (moduleName)


State 12

    9 optModPortList: LPAREN . RPAREN
   10               | LPAREN . modPortList RPAREN

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9
    RPAREN              shift, and go to state 14
    Key_INOUT           shift, and go to state 15
    Key_INPUT           shift, and go to state 16
    Key_OUTPUT          shift, and go to state 17

    modPortList      go to state 18
    modPortName      go to state 19
    portName         go to state 20
    localIdentifier  go to state 21
    direction        go to state 22


State 13

    7 module: _placeHolder_ Key_MODULE moduleName optModPortList . SEMI $@1 optModuleItemList $@2 Key_ENDMODULE

    SEMI  shift, and go to state 23


State 14

    9 optModPortList: LPAREN RPAREN .

    $default  reduce using rule 9 (optModPortList)


State 15

  210 direction: Key_INOUT .

    $default  reduce using rule 210 (direction)


State 16

  209 direction: Key_INPUT .

    $default  reduce using rule 209 (direction)


State 17

  211 direction: Key_OUTPUT .

    $default  reduce using rule 211 (direction)


State 18

   10 optModPortList: LPAREN modPortList . RPAREN
   11 modPortList: modPortList . COMMA modPortName

    COMMA   shift, and go to state 24
    RPAREN  shift, and go to state 25


State 19

   12 modPortList: modPortName .

    $default  reduce using rule 12 (modPortList)


State 20

   14 modPortName: portName .

    $default  reduce using rule 14 (modPortName)


State 21

  205 portName: localIdentifier .

    $default  reduce using rule 205 (portName)


State 22

   13 modPortName: direction . portName

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    portName         go to state 26
    localIdentifier  go to state 21


State 23

    7 module: _placeHolder_ Key_MODULE moduleName optModPortList SEMI . $@1 optModuleItemList $@2 Key_ENDMODULE

    $default  reduce using rule 5 ($@1)

    $@1  go to state 27


State 24

   11 modPortList: modPortList COMMA . modPortName

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9
    Key_INOUT           shift, and go to state 15
    Key_INPUT           shift, and go to state 16
    Key_OUTPUT          shift, and go to state 17

    modPortName      go to state 28
    portName         go to state 20
    localIdentifier  go to state 21
    direction        go to state 22


State 25

   10 optModPortList: LPAREN modPortList RPAREN .

    $default  reduce using rule 10 (optModPortList)


State 26

   13 modPortName: direction portName .

    $default  reduce using rule 13 (modPortName)


State 27

    7 module: _placeHolder_ Key_MODULE moduleName optModPortList SEMI $@1 . optModuleItemList $@2 Key_ENDMODULE

    $default  reduce using rule 16 (optModuleItemList)

    optModuleItemList  go to state 29


State 28

   11 modPortList: modPortList COMMA modPortName .

    $default  reduce using rule 11 (modPortList)


State 29

    7 module: _placeHolder_ Key_MODULE moduleName optModPortList SEMI $@1 optModuleItemList . $@2 Key_ENDMODULE
   15 optModuleItemList: optModuleItemList . modItem

    Key_INTEGER    shift, and go to state 30
    Key_INOUT      shift, and go to state 15
    Key_INPUT      shift, and go to state 16
    Key_OUTPUT     shift, and go to state 31
    Key_PARAMETER  shift, and go to state 32
    Key_SUPPLY0    shift, and go to state 33
    Key_SUPPLY1    shift, and go to state 34
    Key_REAL       shift, and go to state 35
    Key_REG        shift, and go to state 36
    Key_TIME       shift, and go to state 37
    Key_REALTIME   shift, and go to state 38
    Key_TRIREG     shift, and go to state 39
    Key_WIRE       shift, and go to state 40
    Key_UWIRE      shift, and go to state 41
    Key_WAND       shift, and go to state 42
    Key_WOR        shift, and go to state 43
    Key_TRI        shift, and go to state 44
    Key_TRIAND     shift, and go to state 45
    Key_TRIOR      shift, and go to state 46
    Key_TRI0       shift, and go to state 47
    Key_TRI1       shift, and go to state 48

    Key_ENDMODULE  reduce using rule 6 ($@2)
    Key_ENDMODULE  [reduce using rule 139 (stmtList)]
    Key_INTEGER    [reduce using rule 139 (stmtList)]
    Key_INOUT      [reduce using rule 139 (stmtList)]
    Key_INPUT      [reduce using rule 139 (stmtList)]
    Key_OUTPUT     [reduce using rule 139 (stmtList)]
    Key_PARAMETER  [reduce using rule 139 (stmtList)]
    Key_SUPPLY0    [reduce using rule 139 (stmtList)]
    Key_SUPPLY1    [reduce using rule 139 (stmtList)]
    Key_REAL       [reduce using rule 139 (stmtList)]
    Key_REG        [reduce using rule 139 (stmtList)]
    Key_TIME       [reduce using rule 139 (stmtList)]
    Key_REALTIME   [reduce using rule 139 (stmtList)]
    Key_TRIREG     [reduce using rule 139 (stmtList)]
    Key_WIRE       [reduce using rule 139 (stmtList)]
    Key_UWIRE      [reduce using rule 139 (stmtList)]
    Key_WAND       [reduce using rule 139 (stmtList)]
    Key_WOR        [reduce using rule 139 (stmtList)]
    Key_TRI        [reduce using rule 139 (stmtList)]
    Key_TRIAND     [reduce using rule 139 (stmtList)]
    Key_TRIOR      [reduce using rule 139 (stmtList)]
    Key_TRI0       [reduce using rule 139 (stmtList)]
    Key_TRI1       [reduce using rule 139 (stmtList)]
    $default       reduce using rule 139 (stmtList)

    $@2           go to state 49
    modItem       go to state 50
    portDecl      go to state 51
    netDecl       go to state 52
    netTypeDecl   go to state 53
    regDecl       go to state 54
    integerDecl   go to state 55
    realDecl      go to state 56
    realTimeDecl  go to state 57
    timeDecl      go to state 58
    constDecl     go to state 59
    stmtList      go to state 60
    direction     go to state 61


State 30

   94 integerDecl: Key_INTEGER . variableList SEMI

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    variableList     go to state 62
    varWtInit        go to state 63
    variableName     go to state 64
    localIdentifier  go to state 65


State 31

   27 portDecl: Key_OUTPUT . Key_REG signedOrNull rangeOrNull variableList SEMI
   28         | Key_OUTPUT . outputVariable variableList SEMI
  211 direction: Key_OUTPUT .

    Key_INTEGER  shift, and go to state 66
    Key_REG      shift, and go to state 67
    Key_TIME     shift, and go to state 68

    Key_REG   [reduce using rule 211 (direction)]
    $default  reduce using rule 211 (direction)

    outputVariable  go to state 69


State 32

   98 constDecl: Key_PARAMETER . localIdentifier ASSIGN NUMBER SEMI

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    localIdentifier  go to state 70


State 33

   74 netTypeDecl: Key_SUPPLY0 .

    $default  reduce using rule 74 (netTypeDecl)


State 34

   75 netTypeDecl: Key_SUPPLY1 .

    $default  reduce using rule 75 (netTypeDecl)


State 35

   95 realDecl: Key_REAL . variableList SEMI

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    variableList     go to state 71
    varWtInit        go to state 63
    variableName     go to state 64
    localIdentifier  go to state 65


State 36

   91 regDecl: Key_REG . signedOrNull optRange variableList SEMI

    SIGNED  shift, and go to state 72

    $default  reduce using rule 93 (signedOrNull)

    signedOrNull  go to state 73


State 37

   97 timeDecl: Key_TIME . variableList SEMI

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    variableList     go to state 74
    varWtInit        go to state 63
    variableName     go to state 64
    localIdentifier  go to state 65


State 38

   96 realTimeDecl: Key_REALTIME . variableList SEMI

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    variableList     go to state 75
    varWtInit        go to state 63
    variableName     go to state 64
    localIdentifier  go to state 65


State 39

   76 netTypeDecl: Key_TRIREG .

    $default  reduce using rule 76 (netTypeDecl)


State 40

   65 netTypeDecl: Key_WIRE .

    $default  reduce using rule 65 (netTypeDecl)


State 41

   66 netTypeDecl: Key_UWIRE .

    $default  reduce using rule 66 (netTypeDecl)


State 42

   67 netTypeDecl: Key_WAND .

    $default  reduce using rule 67 (netTypeDecl)


State 43

   68 netTypeDecl: Key_WOR .

    $default  reduce using rule 68 (netTypeDecl)


State 44

   69 netTypeDecl: Key_TRI .

    $default  reduce using rule 69 (netTypeDecl)


State 45

   72 netTypeDecl: Key_TRIAND .

    $default  reduce using rule 72 (netTypeDecl)


State 46

   73 netTypeDecl: Key_TRIOR .

    $default  reduce using rule 73 (netTypeDecl)


State 47

   70 netTypeDecl: Key_TRI0 .

    $default  reduce using rule 70 (netTypeDecl)


State 48

   71 netTypeDecl: Key_TRI1 .

    $default  reduce using rule 71 (netTypeDecl)


State 49

    7 module: _placeHolder_ Key_MODULE moduleName optModPortList SEMI $@1 optModuleItemList $@2 . Key_ENDMODULE

    Key_ENDMODULE  shift, and go to state 76


State 50

   15 optModuleItemList: optModuleItemList modItem .

    $default  reduce using rule 15 (optModuleItemList)


State 51

   17 modItem: portDecl .

    $default  reduce using rule 17 (modItem)


State 52

   18 modItem: netDecl .

    $default  reduce using rule 18 (modItem)


State 53

   47 netDecl: netTypeDecl . signedOrNull delayOrNull netItemOrAssignDeclList SEMI
   48        | netTypeDecl . vectoredOrScalared signedOrNull range delayOrNull netItemOrAssignDeclList SEMI
   49        | netTypeDecl . signedOrNull range delayOrNull netItemOrAssignDeclList SEMI
   50        | netTypeDecl . strengthList signedOrNull delayOrNull netItemAssignDeclList SEMI
   51        | netTypeDecl . strengthList vectoredOrScalared signedOrNull range delayOrNull netItemAssignDeclList SEMI
   52        | netTypeDecl . strengthList signedOrNull range delayOrNull netItemAssignDeclList SEMI

    LPAREN    shift, and go to state 77
    SIGNED    shift, and go to state 72
    VECTORED  shift, and go to state 78
    SCALARED  shift, and go to state 79

    $default  reduce using rule 93 (signedOrNull)

    vectoredOrScalared  go to state 80
    strengthList        go to state 81
    signedOrNull        go to state 82


State 54

   19 modItem: regDecl .

    $default  reduce using rule 19 (modItem)


State 55

   20 modItem: integerDecl .

    $default  reduce using rule 20 (modItem)


State 56

   21 modItem: realDecl .

    $default  reduce using rule 21 (modItem)


State 57

   24 modItem: realTimeDecl .

    $default  reduce using rule 24 (modItem)


State 58

   25 modItem: timeDecl .

    $default  reduce using rule 25 (modItem)


State 59

   22 modItem: constDecl .

    $default  reduce using rule 22 (modItem)


State 60

   23 modItem: stmtList .
  138 stmtList: stmtList . stmt

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9
    Key_ASSIGN          shift, and go to state 83
    Key_ALWAYS          shift, and go to state 84

    IDENTIFIER          [reduce using rule 23 (modItem)]
    ESCAPED_IDENTIFIER  [reduce using rule 23 (modItem)]
    Key_ASSIGN          [reduce using rule 23 (modItem)]
    Key_ALWAYS          [reduce using rule 23 (modItem)]
    $default            reduce using rule 23 (modItem)

    assignStmt       go to state 85
    instanceStmt     go to state 86
    alwaysStmt       go to state 87
    stmt             go to state 88
    localIdentifier  go to state 89


State 61

   26 portDecl: direction . portTypeDeclOrNull signedOrNull rangeOrNull variableList SEMI

    Key_SUPPLY0  shift, and go to state 90
    Key_SUPPLY1  shift, and go to state 91
    Key_REG      shift, and go to state 92
    Key_TRIREG   shift, and go to state 93
    Key_WIRE     shift, and go to state 94
    Key_UWIRE    shift, and go to state 95
    Key_WAND     shift, and go to state 96
    Key_WOR      shift, and go to state 97
    Key_TRI      shift, and go to state 98
    Key_TRIAND   shift, and go to state 99
    Key_TRIOR    shift, and go to state 100
    Key_TRI0     shift, and go to state 101
    Key_TRI1     shift, and go to state 102

    $default  reduce using rule 44 (portTypeDeclOrNull)

    portTypeDeclOrNull  go to state 103


State 62

   94 integerDecl: Key_INTEGER variableList . SEMI
  115 variableList: variableList . COMMA varWtInit

    COMMA  shift, and go to state 104
    SEMI   shift, and go to state 105


State 63

  116 variableList: varWtInit .

    $default  reduce using rule 116 (variableList)


State 64

  117 varWtInit: variableName . ASSIGN cExpression
  118          | variableName . optRange

    ASSIGN  shift, and go to state 106
    LBRACK  shift, and go to state 107

    $default  reduce using rule 213 (optRange)

    optRange  go to state 108
    range     go to state 109


State 65

  206 variableName: localIdentifier .

    $default  reduce using rule 206 (variableName)


State 66

   30 outputVariable: Key_INTEGER .

    $default  reduce using rule 30 (outputVariable)


State 67

   27 portDecl: Key_OUTPUT Key_REG . signedOrNull rangeOrNull variableList SEMI

    SIGNED  shift, and go to state 72

    $default  reduce using rule 93 (signedOrNull)

    signedOrNull  go to state 110


State 68

   29 outputVariable: Key_TIME .

    $default  reduce using rule 29 (outputVariable)


State 69

   28 portDecl: Key_OUTPUT outputVariable . variableList SEMI

    IDENTIFIER          shift, and go to state 8
    ESCAPED_IDENTIFIER  shift, and go to state 9

    variableList     go to state 111
    varWtInit        go to state 63
    variableName     go to state 64
    localIdentifier  go to state 65


State 70

   98 constDecl: Key_PARAMETER localIdentifier . ASSIGN NUMBER SEMI

    ASSIGN  shift, and go to state 112


State 71

   95 realDecl: Key_REAL variableList . SEMI
  115 variableList: variableList . COMMA varWtInit
